HelloUltraviolet/Fixtures/RejectedSource/Procedures/RecordMethodDuplicate/Expected.uv
//! Expected diagnostic metadata for the RecordMethodDuplicate rejected-source specimen.

expectedDiagnostic("", "rule.15.Record-Method-Dup")
